update makefiles to add ibverbs, pthread libs

--- a/03_file-transfer/rdma-file-transfer/Makefile
+++ b/03_file-transfer/rdma-file-transfer/Makefile
@@ -2,7 +2,7 @@
 
 CFLAGS  := -Wall -Werror -g
 LD      := gcc
-LDFLAGS := ${LDFLAGS} -lrdmacm -libverbs
+LDFLAGS := ${LDFLAGS} -lrdmacm -libverbs -lpthread
 
 APPS    := client server
 
