Changed Makefiles to use LDLIBS for libraries instead of LDFLAGS, fixing compilation issues

--- a/01_basic-client-server/Makefile
+++ b/01_basic-client-server/Makefile
@@ -1,7 +1,7 @@
 .PHONY: clean
 
 CFLAGS  := -Wall -g
-LDFLAGS := ${LDFLAGS} -lrdmacm -libverbs -lpthread
+LDLIBS  := ${LDLIBS} -lrdmacm -libverbs -lpthread
 
 APPS    := server client
 
