--- a/02_read-write/Makefile
+++ b/02_read-write/Makefile
@@ -2,17 +2,17 @@
 
 CFLAGS  := -Wall -Werror -g
 LD      := gcc
-LDFLAGS := ${LDFLAGS} -lrdmacm -libverbs -lpthread
+LDLIBS  := ${LDLIBS} -lrdmacm -libverbs -lpthread
 
 APPS    := rdma-client rdma-server
 
 all: ${APPS}
 
 rdma-client: rdma-common.o rdma-client.o
-	${LD} -o $@ $^ ${LDFLAGS}
+	${LD} -o $@ $^ ${LDLIBS}
 
 rdma-server: rdma-common.o rdma-server.o
-	${LD} -o $@ $^ ${LDFLAGS}
+	${LD} -o $@ $^ ${LDLIBS}
 
 clean:
 	rm -f *.o ${APPS}
